push de pré publication

--- a/package.json
+++ b/package.json
@@ -1,21 +1,51 @@
 {
   "name": "java-autocompletions",
+  "publisher": "TomDunet",
   "displayName": "Java Autocomplétions",
   "description": "Extention java qui contient des snippets Perso",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.83.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Oridoshi/java-autocompletions"
+  },
   "categories": [
-    "Other"
+    "Other",
+    "Snippets"
   ],
-  "activationEvents": [],
+  "keywords": [
+    "java",
+    "autocompletion",
+    "snippets",
+    "java snippets",
+    "java autocompletion",
+    "java autocomplete",
+    "java autocomplete snippets",
+    "java autocomplete autocompletion"
+  ],
+  "activationEvents": [
+    "onLanguage:java"
+  ],
   "main": "./dist/extension.js",
   "contributes": {
-    "commands": [
+    "languages": [
       {
-        "command": "java-autocompletions.helloWorld",
-        "title": "Hello World"
+        "id": "java",
+        "aliases": [
+          "JAVA",
+          "java"
+        ],
+        "extensions": [
+          ".java"
+        ]
+      }
+    ],
+    "snippets": [
+      {
+        "language": "java",
+        "path": "./snippets/java.json"
       }
     ]
   },
@@ -31,18 +61,21 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.83.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "16.x",
+    "@types/vscode": "^1.83.0",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
+    "@vscode/test-electron": "^2.3.4",
     "eslint": "^8.47.0",
     "glob": "^10.3.3",
     "mocha": "^10.2.0",
-    "typescript": "^5.1.6",
     "ts-loader": "^9.4.4",
+    "typescript": "^5.2.2",
     "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4",
-    "@vscode/test-electron": "^2.3.4"
+    "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "java-parser": "^2.0.5"
   }
 }
