--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "publisher": "TomDunet",
   "displayName": "JAVA Autocomplétions",
   "description": "Extention java qui contient des snippets Perso",
-  "version": "1.0.2",
+  "version": "1.0.3",
+  "icon": "data/img/icon.png",
   "engines": {
     "vscode": "^1.83.0"
   },
