--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "java-autocompletions",
   "publisher": "TomDunet",
   "displayName": "JAVA Autocomplétions",
-  "description": "Extention java qui contient des snippets Perso",
-  "version": "1.0.4",
+  "description": "Extention java pour avoir des autocomplétions et des snippets",
+  "version": "1.0.5",
   "icon": "data/img/icon.png",
   "engines": {
     "vscode": "^1.83.0"
